testsuite/poke.pkl/asm-exp-diag-5.pk
/* { dg-do compile } */

var s = "foo";

asm int<32>: (s + "bar"); /* { dg-error "constant" } */
